--- a/app/styles/afui.custom.css
+++ b/app/styles/afui.custom.css
@@ -1894,7 +1894,7 @@ color:inherit;
 	font-weight: normal;
 }
 
-#afui.android .button {
+/*#afui.android .button {
 	border-radius:0;
 	border:none;
 	background:#424343;
@@ -1903,6 +1903,7 @@ color:inherit;
 	text-shadow:none;
 	box-shadow: inset 0 1px 0 rgba(255,255,255,.4);
 }
+*/
 
 #afui.android.light .button {
     background:#eee;
@@ -1952,7 +1953,7 @@ color:inherit;
     border-bottom:1px solid rgba(255,255,255,.25);
 }
 
-#afui.android .afPopup {
+/*#afui.android .afPopup {
     display: block;
     width: 280px;
     float:left;
@@ -1972,7 +1973,7 @@ color:inherit;
     background:inherit;
     color:inherit;
     padding:10px;
-}
+}*/
 
 #afui.android .afPopup>HEADER{
     font-weight:bold;
@@ -2155,7 +2156,7 @@ color:inherit;
     color:#fff;   
 }
 
-#afui.ios .afPopup {
+#afui .afPopup {
      display: block;
     width: 280px;
     float:left;
