vertical layout for settings menu

--- a/app/scripts/templates/slider.hbs
+++ b/app/scripts/templates/slider.hbs
@@ -1,6 +1,7 @@
 <div class="slider_wrapper">
 {{#each slides}}
 	<div class="slider_slide">
+		<span class="slider_nav-swipe-area"></span>
 		<span style="background-image:url(images/demopic.jpg)" class="slider_image"></span>
 		<h4 class="slider_author">{{_source.name}}</h4>
 		<h5 class="slider_title">{{_source.title}}</h5>
