--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,9 +6,11 @@ body,
 .input-text { background:#fff !important }
 
 /* zero height for main page header */
-#afui #header header[data-parent=main] {
+#afui #header header[data-parent=main],
+#afui #header header.full-page-header {
 	height:0 !important;
-	border:0 !important
+	border:0 !important;
+	display:none !important
 }
 
 
@@ -174,53 +176,108 @@ body #afui .search-field {
 	
 /* carousel */
 .carousel {
-	position:absolute;
-	overflow:hidden;
-	bottom:0;
-	left:0;
-	width:98%;
-	margin:0 1% 1%;
+	bottom: 0;
+	height: 150px;
+	left: -9999px;
+	margin: 0 1% 1%;
+	overflow: scroll;
+	position: absolute;
+	width: 98%;
+	-webkit-overflow-scrolling:touch !important;
 }
-
+	
+	.carousel.m-visible { left:0; }
+	
 	.carousel_wrapper {
-		position:relative;
-		overflow:hidden;
-		height:140px;
+		position:absolute;
+		left:0;
+		top:0;
+		width:100%;
+		height:150px;
+		
+		overflow:scroll;
+		
+		-webkit-transform: translateZ(0);
+		-moz-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		-o-transform: translateZ(0);
+		transform: translateZ(0);
 	}
+	
+		.carousel.m-visible .carousel_wrapper {
+			width:2000em;
+		}
 	
 	.carousel_slide {
 		float:left;
-		position:relative !important;
-		width:100%;
 		position:relative;
-		/*margin-right:1%;*/
-		height:140px;
-		left:0 !important;
+		width: 33%;
+		margin-right:1%;
+		height: 150px;
 	}
 		
 		.carousel_image.m-last { margin-right:0; }
 	
 	.carousel_image {
+		display:block;
+		width:100%;
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
 		background-size: cover;
-		height: 100%;
-		width: 32.6%;
 		z-index:1;
-		margin-right:1%;
-		float:left;
-		
-		/*
-		left: 0;
-		position: absolute;
-		top: 0;
-		*/
+		height: 150px;
 	}
+
+/* full page */
+.full-page {
+	opacity:0;
+	position:fixed;
+	width:150px;
+	height:auto;
 	
+	transition:top 0.5s, left 0.5s, width 0.5s, height 0.5s;
+	-webkit-transition:top 0.5s, left 0.5s, width 0.5s, height 0.5s;
+}
+
+.full-page_bg {
+	background:rgba(0, 0, 0, 0.3);
+	width:100%;
+	height:100%;
+	left:0;
+	top:0;
+	z-index:1
+}
+
+.full-page_content {
+	background: none repeat scroll 0 0 #FFFFFF;
+	bottom: 3%;
+	left: 5%;
+	position: absolute;
+	right: 5%;
+	top: 3%;
+	z-index: 2;
+	padding:10px;
+	overflow:scroll
+}
+
+.full-page.m-visible {
+	height: 100%;
+	left: 0 !important;
+	opacity: 1;
+	padding: 0;
+	top: 0 !important;
+	width: 100%;
+	z-index: 100001;
+}
 	
 /* browser and tablets */
 @media handheld, only screen and (min-width: 768px) {
 	body #afui .search-field {
 		width: 226px;
 	}
+	
+	.carousel,
+	.carousel_wrapper,
+	.carousel_slide
+	.carousel_image { height:400px }
 }
