--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -179,18 +179,22 @@ body #afui .search-field {
 	bottom: 0;
 	height: 150px;
 	left: -9999px;
-	margin: 0 1% 1%;
+	margin: 0 3px 1%;
 	z-index:1;
 	overflow: hidden;
 	position: absolute;
-	width: 98%;
+	width: 100%;
+	overflow:scroll;
+	z-index:1000;
+	
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
 	/*-webkit-overflow-scrolling:touch;*/
 }
 	
 	.carousel.m-visible { left:0; }	
-
-	.carousel_container {}
-	
+   	
 	.carousel_wrapper {
 		width:100%;
 		height:150px;
@@ -220,14 +224,29 @@ body #afui .search-field {
 		/*.carousel.m-visible .carousel_wrapper { width:2000em; } */
 	
 	.carousel_slide {
-		float:left;
 		position:relative;
-		width: 33%;
-		margin-right:1%;
+		width:100%;
 		height: 150px;
+		
+		
 	}
 		
-		.carousel_image.m-last { margin-right:0; }
+		.carousel.m-visible .carousel_slide { float:left }
+		
+		.carousel_doc {
+			float:left;
+			padding-right:3px;
+			height: 150px;
+			width: 33.3%;
+			
+			-webkit-box-sizing:border-box;
+			-moz-box-sizing:border-box;
+			box-sizing:border-box;
+		}
+		
+		.carousel_doc.m-last { margin-right:0; }
+	
+		.carousel_slide:last-child .carousel_doc.m-last { padding-right:3px; width:104px }
 	
 	.carousel_image {
 		display:block;
