--- a/app/scripts/templates/settings.hbs
+++ b/app/scripts/templates/settings.hbs
@@ -1,4 +1,7 @@
-<input type="text" value="Search" class="search-field" />
+<form class="search-form" />
+	<input type="text" data-placeholder="Search" class="search-field" />
+	<input type="submit" value="Submit" class="search-submit" />
+</form>
 
 {{#if loggedIn}}
 	<a href="#changepass-page" class="button m-settings m-first" id="user-changepass" title="Login">Change password</a>
