--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -69,17 +69,34 @@ body,
 
 #afui .button.m-first { border-top:1px solid #53585F; }
 
+#afui .search-form { padding:0 15px; }
+#afui .search-submit { 
+	position:absolute;
+	background: url("../images/search.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
+	border: 0 none;
+	height: 16px;
+	right: 20px;
+	text-indent: -999px;
+	top: 7px;
+	width: 16px;
+}
+
 body #afui .search-field {
 	color: #53585F !important;
 	display: block;
 	float: none;
 	height: 30px;
-	margin: 15px;
+	margin: 15px 0;
 	padding: 0;
 	text-indent: 10px;
 	width: 170px;
+	width:100%;
 	border-color:#53585F;
 	background:#fff !important;
+	
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box
 }
 
 /* hide navbar */
@@ -227,8 +244,6 @@ body #afui .search-field {
 		position:relative;
 		width:100%;
 		height: 150px;
-		
-		
 	}
 		
 		.carousel.m-visible .carousel_slide { float:left }
@@ -300,11 +315,26 @@ body #afui .search-field {
 	z-index: 100001;
 }
 	
+.search-results { padding:50px 10px 0; }
+.search-results__li {
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: block;
+	float: left;
+	height: 150px;
+	margin-bottom: 2%;
+	margin-right: 2%;
+	width: 32%;
+	z-index: 1;
+}
+
+.search-results__li.m-last { margin-right:0; }
+	
 /* browser and tablets */
 @media handheld, only screen and (min-width: 768px) {
-	body #afui .search-field {
-		width: 226px;
-	}
+	
+	/* body #afui .search-field { width: 226px; } */
 	
 	.carousel,
 	.carousel_wrapper,
